# rosetta-bitcoin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker.conf.toml  dockerdev.conf.toml  fleet.toml
.cargo/: config
.docker/: Dockerfile.devenv
.github/ISSUE_TEMPLATE/: bug.md  documentation.md  feature.md  proposal.md
src/: call_api.rs  construction_api.rs  data_api.rs  indexer_api.rs  main.rs  node.rs  optional_api.rs  request.rs
src/api/: account_api.rs  block_api.rs  call_api.rs  construction_api.rs  events_api.rs  mempool_api.rs  mod.rs  network_api.rs  optional_api.rs  search_api.rs
src/responses/: error.rs  mod.rs  response.rs
src/responses/common/: bitcoin_transaction.rs  fee_estimate.rs  get_network_info.rs  get_peer_info.rs  mod.rs
src/responses/data/: getblock.rs  getblockchaininfo.rs  getnetworkinfo.rs  getpeerinfo.rs  mod.rs  scantxoutset.rs
src/responses/optional/: mod.rs
tools/: Insomnia_example_payloads.json
