[package]
name = "rosetta-bitcoin"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"

[dependencies]
mentat = { git = "https://github.com/monadicus/mentat", features = ["server"] }
futures = "0.3.21"
hex = "0.4.3"
bitcoin = "0.28.0"

[patch."https://github.com/monadicus/mentat"]
mentat = { path = "../mentat/mentat" }